test/langtools/tools/javac/valhalla/lworld-values/InlineAnnotationOnAnonymousClass.out
InlineAnnotationOnAnonymousClass.java:11:24: compiler.err.mod.not.allowed.here: value
InlineAnnotationOnAnonymousClass.java:12:29: compiler.err.empty.value.not.yet
2 errors
